--- a/index.html
+++ b/index.html
@@ -1,107 +1,159 @@
-<script>
-const proxyBase = "https://script.google.com/macros/s/AKfycbwM8cy9LOU0qvvKXvHzJPt99nn9__cuZ_TSmFQ6uW0Z2y7eG0pwjBClHWJ6jKRZaxVN/exec";
-const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR4PyEg3JWk2spDwAJhcD6e5qPxWf9HV4Vb9-sZs7M1_hBVgDKA8PIF4Z42wjR1LGYpxgjCDAQy1JE1/pub?gid=1308909698&output=csv";
-let allCards = [];
-
-function extractDriveId(url) {
-  if (!url) return null;
-  let match = url.match(/[?&]id=([\w-]{25,})/); // handles open?id= and uc?id=
-  if (match) return match[1];
-  match = url.match(/[-\w]{25,}/); // fallback for /d/.../view
-  return match ? match[0] : null;
-}
-
-fetch(csvUrl)
-  .then(res => res.text())
-  .then(csv => {
-    const rows = csv.trim().split(/\r?\n/).map(r => r.split(","));
-    const header = rows[0].map(h => h.trim().toLowerCase());
-
-    // helper to find index even if name is slightly off
-    function findCol(names) {
-      for (const n of names) {
-        const i = header.findIndex(h => h.includes(n.toLowerCase()));
-        if (i !== -1) return i;
-      }
-      return -1;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Prime Countertops - Remnant Live Inventory</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600" rel="stylesheet">
+  <style>
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { font-family:'Inter',system-ui,sans-serif; background:#f8f9fa; color:#1a1a1a; line-height:1.5; }
+    header { background:#000000; color:#ffd700; padding:32px 20px; text-align:center; }
+    header h1 { font-size:28px; font-weight:600; margin:0; }
+    header p { margin-top:8px; font-size:16px; opacity:0.9; }
+    .container { max-width:1200px; margin:0 auto; padding:20px; }
+    .search-container { text-align:center; margin-bottom:20px; }
+    .search-input {
+      padding:10px 16px;
+      border:1px solid #ccc;
+      border-radius:8px;
+      width:80%;
+      max-width:400px;
+      font-size:16px;
     }
+    .remnant-grid { 
+      display: grid; 
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+      gap: 24px; 
+    }
+    .card { 
+      border: 1px solid #e0e0e0; 
+      border-radius: 16px; 
+      overflow: hidden; 
+      background: #fff; 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08); 
+      text-align: center; 
+      transition: transform 0.2s;
+      cursor: pointer;
+    }
+    .card:hover { transform: translateY(-4px); }
+    .card img { width:100%; height:180px; object-fit:cover; background:#eee; }
+    .card .info { padding:12px; font-size:14px; }
+    .card .info b { font-size:16px; display:block; margin-bottom:4px; }
+    .card a { 
+      display:block; margin:12px; padding:10px; 
+      background:#000; color:#ffd700; border-radius:8px; 
+      text-decoration:none; font-weight:600; 
+      transition: background 0.2s;
+    }
+    .card a:hover { background:#333; }
+    .empty { grid-column:1/-1; text-align:center; color:#666; font-size:18px; padding:40px; }
+    .footer { text-align:center; padding:24px; font-size:14px; background:#000; color:#ffd700; }
+    @media (max-width:768px) { .remnant-grid { grid-template-columns:1fr; } }
+    .lightbox { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:1000; }
+    .lightbox img { max-width:90%; max-height:90vh; border-radius:12px; }
+    .lightbox.active { display:flex; }
+  </style>
+</head>
+<body>
 
-    const idx = {
-      id: findCol(["id"]),
-      material: findCol(["material"]),
-      color: findCol(["color"]),
-      length: findCol(["length", "lenght"]),
-      width: findCol(["width"]),
-      area: findCol(["usable area"]),
-      link: findCol(["google link", "link"]),
-      status: findCol(["status"])
-    };
+<header>
+  <h1>Prime Countertops</h1>
+  <p>Remnant Live Inventory</p>
+</header>
 
-    console.log("Column indexes:", idx);
+<div class="container">
+  <div class="search-container">
+    <input type="text" class="search-input" id="search" placeholder="Search by ID, color, or size..." onkeyup="filterCards()">
+  </div>
+  <div class="remnant-grid" id="grid">
+    <p class="empty">Loading inventory...</p>
+  </div>
+</div>
 
-    const grid = document.getElementById("grid");
-    let out = "";
+<div class="footer">
+  <p>Questions? Email <a href="mailto:sales@primecountertops.net" style="color:#ffd700;">sales@primecountertops.net</a> or call (240) 887-0036</p>
+</div>
 
-    rows.slice(1).forEach(row => {
-      const status = (row[idx.status] || "").toLowerCase();
-      if (!status.includes("available")) return;
+<div class="lightbox" id="lightbox">
+  <img id="lightbox-img" src="" alt="View">
+</div>
 
-      const id = row[idx.id] || "";
-      const color = row[idx.color] || "";
-      const material = row[idx.material] || "";
-      const length = row[idx.length] || "";
-      const width = row[idx.width] || "";
-      const area = row[idx.area] || "";
-      const link = row[idx.link] || "";
+<script>
+  const proxyBase = "https://script.google.com/macros/s/AKfycbwM8cy9LOU0qvvKXvHzJPt99nn9__cuZ_TSmFQ6uW0Z2y7eG0pwjBClHWJ6jKRZaxVN/exec";
+  const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR4PyEg3JWk2spDwAJhcD6e5qPxWf9HV4Vb9-sZs7M1_hBVgDKA8PIF4Z42wjR1LGYpxgjCDAQy1JE1/pub?gid=1308909698&output=csv";
+  let allCards = [];
 
-      const driveId = extractDriveId(link);
-      const imgUrl = driveId
-        ? `${proxyBase}?id=${driveId}`
-        : "https://placehold.co/300x180?text=No+Photo";
+  function extractDriveId(url) {
+    if (!url) return null;
+    let match = url.match(/\/d\/([a-zA-Z0-9_-]{25,})/);
+    if (match) return match[1];
+    match = url.match(/id=([a-zA-Z0-9_-]{25,})/);
+    if (match) return match[1];
+    match = url.match(/folders\/([a-zA-Z0-9_-]{25,})/);
+    if (match) return match[1];
+    return null;
+  }
 
-      console.log(`Row ${id}:`, imgUrl);
+  fetch(csvUrl)
+    .then(r => r.text())
+    .then(csv => {
+      const rows = csv.trim().split("\n").map(r => r.split(","));
+      let out = "";
+      rows.slice(1).forEach(row => {
+        const id = row[0];
+        const material = row[1];
+        const color = row[2];
+        const length = row[4];
+        const width = row[5];
+        const link = row[7];
+        const status = (row[8] || "").toLowerCase();
 
-      const card = `
-        <div class="card" onclick="openLightbox('${imgUrl}')">
-          <img src="${imgUrl}" alt="${color}"
-               onerror="this.src='https://placehold.co/300x180?text=No+Photo'; this.onerror=null;">
-          <div class="info">
-            <b>${color}</b>
-            <div><strong>ID:</strong> ${id}</div>
-            <div><strong>Material:</strong> ${material}</div>
-            <div><strong>Size:</strong> ${length}" × ${width}"</div>
-            <div><strong>Usable Area:</strong> ${area} sq.ft</div>
-          </div>
-          <a href="mailto:sales@primecountertops.net?subject=Reserve%20${id}&body=Hi,%0A%0AI’m interested in this remnant:%0A%0AID:%20${id}%0AColor:%20${color}%0ASize:%20${length}×${width}%22%0A%0ACould you please provide more info?%0A%0AThank you!"
-             class="reserve-btn">Reserve Now</a>
-        </div>`;
-      out += card;
-      allCards.push({ html: card, search: `${id} ${color} ${material} ${length} ${width} ${area}`.toLowerCase() });
+        if (status !== "available") return;
+
+        const fileId = extractDriveId(link);
+        const photoUrl = fileId ? `${proxyBase}?id=${fileId}` : "https://placehold.co/300x180?text=No+Photo";
+
+        const cardHtml = `
+          <div class="card" onclick="openLightbox('${photoUrl}')">
+            <img src="${photoUrl}" alt="${color}" onerror="this.src='https://placehold.co/300x180?text=No+Photo'">
+            <div class="info">
+              <b>${color}</b>
+              <div class="desc">
+                <strong>ID:</strong> ${id}<br>
+                <strong>Material:</strong> ${material}<br>
+                <strong>Size:</strong> ${length}" × ${width}"
+              </div>
+            </div>
+            <a href="mailto:sales@primecountertops.net?subject=Reserve%20${id}&body=Hi,%0A%0AI’m interested in this remnant:%0AID:%20${id}%0AColor:%20${color}%0ASize:%20${length}%20×%20${width}%22%0A%0APlease provide more info.">Reserve Now</a>
+          </div>`;
+        out += cardHtml;
+        allCards.push({ html: cardHtml, search: `${id} ${material} ${color} ${length} ${width}`.toLowerCase() });
+      });
+
+      document.getElementById("grid").innerHTML = out || '<p class="empty">No remnants available.</p>';
+    })
+    .catch(err => {
+      console.error("Error:", err);
+      document.getElementById("grid").innerHTML = '<p class="empty" style="color:red;">Error loading inventory.</p>';
     });
 
-    grid.innerHTML = out || '<p class="empty">No remnants available.</p>';
-  })
-  .catch(err => {
-    console.error("Error loading CSV:", err);
-    document.getElementById("grid").innerHTML =
-      `<p class="empty" style="color:red;">Error loading inventory: ${err.message}</p>`;
+  function filterCards() {
+    const q = document.getElementById("search").value.toLowerCase();
+    const grid = document.getElementById("grid");
+    let filtered = "";
+    allCards.forEach(c => { if (c.search.includes(q)) filtered += c.html; });
+    grid.innerHTML = filtered || '<p class="empty">No results found.</p>';
+  }
+
+  function openLightbox(url) {
+    document.getElementById("lightbox-img").src = url;
+    document.getElementById("lightbox").classList.add("active");
+  }
+  document.getElementById("lightbox").addEventListener("click", () => {
+    document.getElementById("lightbox").classList.remove("active");
   });
-
-function filterCards() {
-  const q = document.getElementById("search").value.toLowerCase();
-  const grid = document.getElementById("grid");
-  let filtered = "";
-  allCards.forEach(c => { if (c.search.includes(q)) filtered += c.html; });
-  grid.innerHTML = filtered || '<p class="empty">No results found.</p>';
-}
-
-function openLightbox(url) {
-  const lb = document.getElementById("lightbox");
-  const img = document.getElementById("lightbox-img");
-  img.src = url;
-  lb.classList.add("active");
-}
-document.getElementById("lightbox").addEventListener("click", () => {
-  document.getElementById("lightbox").classList.remove("active");
-});
 </script>
+
+</body>
+</html>
