--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <script>
 // Live CSV from Google Sheet
 const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRnGELVHvjmo6XT1JI2wlruG_kkliJ6942oyAtkFbJYYAZagAh6Cw3-sxDMqfVj-7LaYiDTOQhExE7u/pub?gid=0&single=true&output=csv";
-const baseURL = "https://primect.github.io/TESTLive_Images/"; 
+const baseURL = "https://primect.github.io/Live-Inventory/"; 
 let allCards = [];
 
 // --- Lightbox/Modal Functions ---
